--- a/app/src/main/res/drawable/round_cornered_button.xml
+++ b/app/src/main/res/drawable/round_cornered_button.xml
@@ -7,8 +7,9 @@
         </shape>
     </item>
     <item android:state_pressed="true">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="@color/mVeryBlu"/>
+            <corners android:radius="10dp"></corners>
         </shape>
     </item>
 </selector>
