--- a/app/src/main/res/layout/activity_play_menu.xml
+++ b/app/src/main/res/layout/activity_play_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/pager_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlayMenu">
+    tools:context=".Activity.PlayMenuActivity">
 
     <TextView
         android:id="@+id/textView7"
@@ -41,7 +41,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="wrap_content"
-        android:layout_height="400dp"
+        android:layout_height="430dp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
