--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="mBlu">#206cbb</color>
     <color name="mLightBlu">#679cd4</color>
     <color name="mVeryBlu">#0a54a0</color>
+
+    <color name="mColorBlue">#004081</color>
+    <color name="mColorYellow">#c9bb00</color>
+    <color name="mColorRed">#c90a0a</color>
+    <color name="mColorBlack">#101010</color>
 </resources>
