--- a/app/src/main/res/layout/activity_connection_test.xml
+++ b/app/src/main/res/layout/activity_connection_test.xml
@@ -54,6 +54,7 @@
 
     <EditText
         android:id="@+id/ip_num"
+        android:digits="0123456789."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -66,6 +67,7 @@
 
     <EditText
         android:id="@+id/ip_num2"
+        android:digits="0123456789."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
