--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -8,6 +8,26 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
+    <ImageView
+        android:id="@+id/blockPlaced_4"
+        android:layout_width="54dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintStart_toEndOf="@+id/blockPlaced_3"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@color/mColorRed" />
+
+    <ImageView
+        android:id="@+id/blockPlaced_3"
+        android:layout_width="54dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintStart_toEndOf="@+id/blockPlaced_2"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@color/mColorRed" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
@@ -247,5 +267,25 @@
         android:text="STOP"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/blockPlaced_1"
+        android:layout_width="54dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@color/mColorRed" />
+
+    <ImageView
+        android:id="@+id/blockPlaced_2"
+        android:layout_width="54dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintStart_toEndOf="@+id/blockPlaced_1"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@color/mColorRed" />
 
 </android.support.constraint.ConstraintLayout>
