--- a/app/src/main/res/drawable/theme_background.xml
+++ b/app/src/main/res/drawable/theme_background.xml
@@ -2,9 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Inset -->
-    <item android:top="1dp" android:left="1dp" android:right="1dp" android:bottom="1dp">
+    <item android:top="0dp" android:left="0dp" android:right="0dp" android:bottom="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="#b7b7b7" />
         </shape>
     </item>
 
