--- a/app/src/main/res/layout/activity_connection_test.xml
+++ b/app/src/main/res/layout/activity_connection_test.xml
@@ -44,9 +44,10 @@
         android:id="@+id/conn_guide"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/fjalla_one"
         android:text="TEXT"
         android:textAlignment="center"
@@ -54,8 +55,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ip_num"
+        app:layout_constraintVertical_bias="0.964" />
 
     <EditText
         android:id="@+id/ip_num"
