--- a/app/src/main/res/layout/activity_multiplayer_selection.xml
+++ b/app/src/main/res/layout/activity_multiplayer_selection.xml
@@ -29,6 +29,7 @@
         android:id="@+id/p1_button"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="160dp"
         android:background="@drawable/round_cornered_button"
         android:fontFamily="@font/fjalla_one"
@@ -37,13 +38,16 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/p2_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/p2_button"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="228dp"
         android:background="@drawable/round_cornered_button"
         android:fontFamily="@font/fjalla_one"
         android:text="Player 2"
@@ -51,5 +55,6 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
